--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,10 +6,17 @@
 
 <div class="box">
   <% newListItems.forEach(function(item){ %>
-  <div class="item">
-    <input type="checkbox" />
-    <p><%= item.name %></p>
-  </div>
+  <form action="/delete" method="post">
+    <div class="item">
+      <input
+        type="checkbox"
+        name="checkbox"
+        value="<%=item._id %>"
+        onChange="this.form.submit()"
+      />
+      <p><%= item.name %></p>
+    </div>
+  </form>
   <% }) %>
 
   <form class="item" action="/" method="post">
@@ -19,7 +26,7 @@
       placeholder="New Item"
       autocomplete="off"
     />
-    <button type="submit" name="list">+</button>
+    <button type="submit" name="list" value="<%= listTitle %>">+</button>
   </form>
 </div>
 
